replaced testing class to  package